# dive_computer

./: .metadata  README.md  pubspec.yaml
android/: build.gradle  build.gradle.kts
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
example/: pubspec.yaml
example/android/app/: build.gradle.kts
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner/: DebugProfile.entitlements  Info.plist  Release.entitlements
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
ios/: dive_computer.podspec
ios/Classes/: BLEManager.swift  BLETransport.swift  DiveComputerPlugin.swift  DiveDownloader.swift
ios/Frameworks/libdivecomputer.xcframework/ios-arm64/Headers/: module.modulemap
lib/: dive_computer.dart  dive_computer_method_channel.dart  dive_computer_platform_interface.dart
lib/src/: dive_computer_plugin.dart  libdivecomputer_plugin.dart
lib/src/models/: dc_device_info.dart  dc_dive.dart  dc_dive_computer.dart  dc_status.dart
macos/: dive_computer.podspec
macos/Classes/: BLEManager.swift  BLETransport.swift  DiveComputerPlugin.swift  DiveDownloader.swift
macos/Frameworks/libdivecomputer.xcframework/macos-arm64/Headers/: module.modulemap
(+12 files in other folders)
